correction: nav does not wrap logo and logo lives in a h1

--- a/day26-chengquan/css/header.css
+++ b/day26-chengquan/css/header.css
@@ -17,28 +17,29 @@ html:not([data-scroll="0"]) header {
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
 }
 
-html:not([data-scroll="0"]) nav img {
-  object-position: -10px -230px;
-}
-
-nav {
+header > .container {
   display: flex;
   justify-content: space-between;
   width: 1048px;
   margin: 0 auto;
 }
 
-nav img {
+header > .container img {
   width: 92px;
   height: 36px;
   object-position: -122px -230px;
   object-fit: none;
 }
 
+html:not([data-scroll="0"]) header > .container img {
+  object-position: -10px -230px;
+}
+
 .nav--pages {
   display: flex;
   gap: 46px;
   align-items: center;
+  height: 100%;
 }
 
 .nav--pages__active,
